--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:Murilo517/agenda-doc.git",
   "author": "Murilo517 <murilosena07@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "vercel": "^30.0.0"
+  }
 }
